<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/text_dark_grey"
        android:text="@string/app_name"
        android:padding="5dp"
        android:textSize="39sp" />

    <TextView
        style="@style/text_dark_grey"
        android:text="@string/name" />

    <TextView
        android:id="@+id/tv_date"
        style="@style/text_dark_grey"
        android:text="@string/date_placeholder" />

    <TextView
        style="@style/text_light_grey"
        android:background="@drawable/blue_rounded_textview"
        android:layout_marginTop="15dp"
        android:text="@string/purchase_cost"
        android:textSize="15sp"
        android:padding="10dp"
        android:paddingStart="20dp"
        android:textAlignment="textStart"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            style="@style/text_dark_grey"
            android:text="@string/manufacture"
            android:textSize="15sp"
            android:padding="5dp"
            android:paddingStart="20dp"
            android:layout_weight="0.30"
            android:gravity="center_vertical"
            android:textAlignment="gravity"
            android:background="@drawable/rounded_textview" />

        <Spinner
            android:id="@+id/sp_manufacture"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:drawSelectorOnTop="true"
            android:layout_gravity="center_vertical"
            android:background="@drawable/spinner_background"
            android:prompt="@string/manufacture"
            android:layout_weight="0.45"/>

        <TextView
            android:id="@+id/tv_manufacture"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            style="@style/text_light_grey"
            android:text="$100,000"
            android:textSize="15sp"
            android:padding="5dp"
            android:paddingStart="15dp"
            android:gravity="center_vertical"
            android:textAlignment="gravity"
            android:layout_weight="0.25"
            android:background="@drawable/rounded_textview" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            style="@style/text_dark_grey"
            android:text="@string/category"
            android:textSize="15sp"
            android:padding="5dp"
            android:paddingStart="20dp"
            android:layout_weight="0.30"
            android:gravity="center_vertical"
            android:textAlignment="gravity"
            android:background="@drawable/rounded_textview" />

        <Spinner
            android:id="@+id/sp_category"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:drawSelectorOnTop="true"
            android:background="@drawable/spinner_background"
            android:prompt="@string/manufacture"
            android:layout_weight="0.45"/>

        <TextView
            android:id="@+id/tv_category"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            style="@style/text_light_grey"
            android:text="$100,000"
            android:textSize="15sp"
            android:padding="5dp"
            android:paddingStart="15dp"
            android:gravity="center_vertical"
            android:textAlignment="gravity"
            android:layout_weight="0.25"
            android:background="@drawable/rounded_textview" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            style="@style/text_dark_grey"
            android:text="@string/country"
            android:textSize="15sp"
            android:padding="5dp"
            android:paddingStart="20dp"
            android:layout_weight="0.30"
            android:gravity="center_vertical"
            android:textAlignment="gravity"
            android:background="@drawable/rounded_textview" />

        <Spinner
            android:id="@+id/sp_country"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:drawSelectorOnTop="true"
            android:background="@drawable/spinner_background"
            android:prompt="@string/manufacture"
            android:layout_weight="0.45"/>

        <TextView
            android:id="@+id/tv_country"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            style="@style/text_light_grey"
            android:text="$100,000"
            android:textSize="15sp"
            android:padding="5dp"
            android:paddingStart="15dp"
            android:gravity="center_vertical"
            android:textAlignment="gravity"
            android:layout_weight="0.25"
            android:background="@drawable/rounded_textview" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            style="@style/text_dark_grey"
            android:text="@string/state"
            android:textSize="15sp"
            android:padding="5dp"
            android:paddingStart="20dp"
            android:layout_weight="0.30"
            android:gravity="center_vertical"
            android:textAlignment="gravity"
            android:background="@drawable/rounded_textview" />

        <Spinner
            android:id="@+id/sp_state"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:drawSelectorOnTop="true"
            android:background="@drawable/spinner_background"
            android:prompt="@string/manufacture"
            android:layout_weight="0.45"/>

        <TextView
            android:id="@+id/tv_state"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            style="@style/text_light_grey"
            android:text="$100,000"
            android:textSize="15sp"
            android:padding="5dp"
            android:paddingStart="15dp"
            android:gravity="center_vertical"
            android:textAlignment="gravity"
            android:layout_weight="0.25"
            android:background="@drawable/rounded_textview" />

    </LinearLayout>

    <TextView
        style="@style/text_light_grey"
        android:background="@drawable/blue_rounded_textview"
        android:layout_marginTop="15dp"
        android:text="@string/number_of_purchase"
        android:textSize="15sp"
        android:padding="10dp"
        android:paddingStart="20dp"
        android:textAlignment="textStart"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            style="@style/text_dark_grey"
            android:text="@string/item"
            android:textSize="15sp"
            android:padding="5dp"
            android:paddingStart="20dp"
            android:layout_weight="0.30"
            android:gravity="center_vertical"
            android:textAlignment="gravity"
            android:background="@drawable/rounded_textview" />

        <Spinner
            android:id="@+id/sp_item"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:drawSelectorOnTop="true"
            android:background="@drawable/spinner_background"
            android:prompt="@string/manufacture"
            android:layout_weight="0.45"/>

        <TextView
            android:id="@+id/tv_item"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            style="@style/text_light_grey"
            android:text="$100,000"
            android:textSize="15sp"
            android:padding="5dp"
            android:paddingStart="15dp"
            android:gravity="center_vertical"
            android:textAlignment="gravity"
            android:layout_weight="0.25"
            android:background="@drawable/rounded_textview" />

    </LinearLayout>

    <TextView
        style="@style/text_light_grey"
        android:background="@drawable/blue_rounded_textview"
        android:layout_marginTop="15dp"
        android:text="@string/most_total_purchase"
        android:textSize="15sp"
        android:padding="10dp"
        android:paddingStart="20dp"
        android:textAlignment="textStart"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            style="@style/text_dark_grey"
            android:text="@string/manufacture"
            android:textSize="15sp"
            android:padding="5dp"
            android:paddingStart="20dp"
            android:layout_weight="0.30"
            android:gravity="center_vertical"
            android:textAlignment="gravity"
            android:background="@drawable/rounded_textview" />

        <TextView
            android:id="@+id/tv_building"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            style="@style/text_light_grey"
            android:text="@string/building_placeholder"
            android:textSize="15sp"
            android:padding="5dp"
            android:paddingStart="15dp"
            android:gravity="center_horizontal"
            android:textAlignment="gravity"
            android:layout_weight="0.70"
            android:background="@drawable/rounded_textview" />

    </LinearLayout>

</LinearLayout>